Fix cookie consent on mobile
Looks weird in ultra small desktop browser now but I honestly don't care
any more at this point.

--- a/assets/less/site.less
+++ b/assets/less/site.less
@@ -49,6 +49,13 @@ body, html {
   height: 100%;
 }
 
+.cc-theme-edgeless {
+  @media (max-width: 767px) {
+    margin-left: -20px;
+    margin-right: -20px;
+  }
+}
+
 .text-align-right  { text-align: right; }
 .text-align-center { text-align: center; }
 
